Updating logic for components.  Currently WIP Reusable form

--- a/tea/src/App.css
+++ b/tea/src/App.css
@@ -7,6 +7,14 @@
   pointer-events: none;
 }
 
+.footer {
+background-color: #61dafb;
+}
+
+.header {
+background-color: #61dafb;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
